<resources>
    <string name="app_name">PiWindMobile</string>
    <string name="loading_meteo_stations">Loading meteo stations ...</string>
    <string name="water_conditions"><![CDATA[Water conditions]]></string>
    <string name="suggested_equipment">Suggested equipment</string>
    <string name="title_activity_station_view">StationViewActivity</string>
    <string name="action_change_units">Change units</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="create_new_account">Create new account</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email_confirmation_title">Check your email to finish the registration</string>
    <string name="confirmation_code_hint">Enter the confirmation code here</string>
    <string name="confirm_email">Confirm email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_set_alert">Setup wind alert</string>
    <string name="action_logout">Logout</string>
    <string name="choose_wind_speed_units">Wind speed unit:</string>
    <string name="choose_temperature_units">Temperature unit:</string>

    <string name="unit_knots">kts</string>
    <string name="unit_mps">m/s</string>
    <string name="unit_kmh">km/h</string>

    <string name="unit_fahrenheit">\u2109</string>
    <string name="unit_celsius">\u2103</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="retrieve_your_password">Retrieve your password</string>
    <string name="your_email_or_username">Your email or username</string>
    <string name="send">Send </string>
    <string name="token">Token</string>
    <string name="change_password_prompt">Change your password using the token received on your email address</string>
    <string name="change_password">Change password</string>
</resources>
