<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piotrmajcher.piwind.piwindmobile.activities.RegistrationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar"
        android:paddingTop="12dp"
        android:paddingBottom="20dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:layout_marginBottom="20dp"
                android:text="@string/create_new_account"/>

            <EditText
                android:id="@+id/username_input_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:hint="@string/username"
                android:inputType="text">
                <requestFocus/>
            </EditText>

            <EditText
                android:id="@+id/email_input_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password_input_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/matching_password_input_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/register"
                />

            <TextView
                android:id="@+id/registration_error_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorError"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>