<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.piotrmajcher.piwind.piwindmobile.activities.ConfirmEmailActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:text="@string/email_confirmation_title"/>

    <EditText
        android:id="@+id/confirmation_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:hint="@string/confirmation_code_hint"
        android:inputType="text">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/confirm_email_error_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/colorError"/>

    <Button
        android:id="@+id/confirm_email_button"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/confirm_email"
        />

</LinearLayout>