<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piotrmajcher.piwind.piwindmobile.activities.ConfirmRetrievePasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar"
        android:paddingTop="12dp"
        android:paddingBottom="20dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:layout_marginBottom="20dp"
                android:text="@string/change_password_prompt"/>

            <EditText
                android:id="@+id/token_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:hint="@string/token"
                android:inputType="text">
                <requestFocus/>
            </EditText>

            <EditText
                android:id="@+id/new_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/new_matching_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/change_password_button"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                />

            <TextView
                android:id="@+id/change_password_error_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorError"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
